--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@stripe/stripe-js": "^2.1.0",
+    "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "firebase": "^10.2.0",
+    "joi": "^17.9.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
     "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
+    "stripe": "^13.2.0"
   }
 }
