--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "next": "13.4.13",
+    "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
