--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^13.2.0"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
