--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
+    "slick-carousel": "^1.8.1",
     "stripe": "^13.2.0"
   },
   "devDependencies": {
